--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ content:
 #         quote: >
 #           Short overview of the project (optional)
         description: | 
-          This work focuses on understanding the charge screening effects in the blended pi-conjugated polymer systems. <mark>P3HTs</mark>(https://www.ossila.com/products/p3ht)
+          This work focuses on understanding the charge screening effects in the blended pi-conjugated polymer systems. [<mark>P3HTs</mark>](https://www.ossila.com/products/p3ht)
           are one of the classical material templates used for testing the electronic and optical properties of polymer semiconductors. Here, the P3HTs are 
           blended with ionic liquid, as prepared by Seong-Min Kim, a previous postdoc from [Dr. Stingelin lab](http://stingelin-lab.gatech.edu). 
           The blended solutions are casted at different temperatures to control the polymer-ionic liquid mixing:
@@ -85,7 +85,7 @@ content:
           monomeric units of electron-sufficient and -deficient domains. The strong charge-transfer character mixes with localized Frenkel-like 
           excitons, which leads to multiple exciton bands throughout the near IR-visible wavelengths. The charge-transfer character has 
           also leads to a non-singlet spin responses. Here, I selected an uprising D-A polymer template, [<mark>DPP-DTT</mark>](https://www.ossila.com/products/dpp-dtt-polymer)
-          and the thin films are deposited through solutions of a concentration gradient, thus the excitonic interchain interaction
+          and the thin films are deposited from solutions of a concentration gradient, thus the excitonic interchain interaction
           could be tuned:
           - Conducted TA measurements to probe the excited-state landscapes of electron push-pull polymers.
           - Scripted Python codes to analyze and visualize 2D data matrices as well as spectral and temporal distributions.
