--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,13 @@ content:
         caption: September 2014 - June 2016
         description: |
           Bachelor of Science in Chemistry
-        
+          
+  - title: Skills 
+    layout: list
+    description: | # this will include new lines to allow paragraphs
+      - Coding languages: Python, Matlab
+      - Softwares: Zemanx, LabVIEW, Microsoft office, autoCAD (entry level)
+      - Languages: Chinese (Native), English (Proficient)
 
   - title: Publication
     layout: text
