--- a/_config.yml
+++ b/_config.yml
@@ -122,14 +122,26 @@ content:
           - Hands-on experiences on optical metrology measurements such as absorption and PL spectroscopy, atomic force microscopy (AFM), dynamic and static light scattering (DLS/SLS), 
             cross-polarized optical microscopy (CPOM).
           - Experiences in building simulation models in calculating optical features of organic semiconductor polymers as well as data analysis and visualization using Python.
-  
+      - layout: right
+        title : Reichmanis Lab (coadvisor)
+        sub_title: Graduate Research Assistant
+        caption: April 2019 - present 
+        link: https://wordpress.lehigh.edu/reichmanisgroup/
+        quote: >
+          Dr. Reichmanis has moved to Lehigh university Nov. 2019, however the supervision and collaboration is still on-going.
+        description: |
+          - Hands-on experience with spin coating and wire-bar coating. 
+          - Experiences in working in clean room for organic field-effect transistor fabrications.
+          - Experiences in viscosity measurements for polymer solutions.
+         
+        
   - title: 
     layout: list
     content:
       - layout: left
         title: Duhamel Lab
         sub_title: Undergraduate Research Assistant
-        caption: May 2017 - present
+        caption: May 2017 - January 2018
         link: https://uwaterloo.ca/chemistry/people-profiles/jean-duhamel
   #         quote: >
   #            Molecular Spectroscopy, Polymer Structure Characterization Waterloo, Canada
