--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ content:
             cross-polarized optical microscopy (CPOM).
           - Experiences in building simulation models in calculating optical features of organic semiconductor polymers as well as data analysis and visualization using Python.
       - layout: right
-        title : Reichmanis Lab (coadvisor)
+        title : Reichmanis Lab
         sub_title: Graduate Research Assistant
         caption: April 2019 - present 
         link: https://wordpress.lehigh.edu/reichmanisgroup/
