--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Yulong Zheng
 title: Ph.D. Candidate in Physical Chemistry
 email: yulong.zheng@gatech.edu
 # email_title: Email (Email title override)
-# phone: 4042686540
+# phone: too-many-spam
 # phone_title: Phone (Phone title override)
 website: Beandope.gatech.io
 # website_title: Web (Website title override)
@@ -50,46 +50,70 @@ about_content: | # this will include new lines to allow paragraphs
   - Born and raised in Hubei, China. 
   - Have been to/lived in a few places around the world.
   - Always excited about high tech.
+  - Newbie skiier
  
 content:
   - title: Research Projects 
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
-        title: Charge Screening Effects in P3HT:Ionic Liquid Blends
-#         link: https://github.com/Beandope/UV_and_PL
-#         link_text: Link Text
-        additional_links:
-          - title: Codes for data analysis and visulization
-            icon: fab fa-github
-            url: https://github.com/Beandope/UV_and_PL
-#         quote: >
-#           Short overview of the project (optional)
-        description: | 
-          This work focuses on understanding the charge screening effects in the blended pi-conjugated polymer systems. [<mark>P3HTs</mark>](https://www.ossila.com/products/p3ht)
-          are one of the classical material templates used for testing the electronic and optical properties of polymer semiconductors. Here, the P3HTs are 
-          blended with ionic liquid, as prepared by Seong-Min Kim, a previous postdoc from [Dr. Stingelin lab](http://stingelin-lab.gatech.edu). 
-          The blended solutions are casted at different temperatures to control the polymer-ionic liquid mixing:
-          - Performed steady-state and temperature-dependent PL to examine the exciton interchain interactions and bandwidths.
-          - Developed a Python script based on Franck-Condon progression to simulate and extract essential spectral parameters.
-          - Conducted TCSPC and Fluorescence Upconversion measurements to investigate the exciton dynamics from femto-microsecond time range.
-          - Built an extended free-space beam path for the ability to measure time-resolved PL under a large range of temperatures.
-     
+#       - layout: left
+#         title: Charge Screening Effects in P3HT:Ionic Liquid Blends
+# #         link: https://github.com/Beandope/UV_and_PL
+# #         link_text: Link Text
+#         additional_links:
+#           - title: Codes for data analysis and visulization
+#             icon: fab fa-github
+#             url: https://github.com/Beandope/UV_and_PL
+# #         quote: >
+# #           Short overview of the project (optional)
+#         description: | 
+#           This work focuses on understanding the charge screening effects in the blended pi-conjugated polymer systems. [<mark>P3HTs</mark>](https://www.ossila.com/products/p3ht)
+#           are one of the classical material templates used for testing the electronic and optical properties of polymer semiconductors. Here, the P3HTs are 
+#           blended with ionic liquid, as prepared by Seong-Min Kim, a previous postdoc from [Dr. Stingelin lab](http://stingelin-lab.gatech.edu). 
+#           The blended solutions are casted at different temperatures to control the polymer-ionic liquid mixing:
+#           - Performed steady-state and temperature-dependent PL to examine the exciton interchain interactions and bandwidths.
+#           - Developed a Python script based on Franck-Condon progression to simulate and extract essential spectral parameters.
+#           - Conducted TCSPC and Fluorescence Upconversion measurements to investigate the exciton dynamics from femto-microsecond time range.
+#           - Built an extended free-space beam path for the ability to measure time-resolved PL under a large range of temperatures.
+
+
+
       - layout: right
-        title: Exciton Dynamics in Elctron Push-Pull Polymers
-        description: |
-          that have attracted significant amount of attention due to their order of magnitude-higher field-effect charge mobility compared
+        title: Exciton Delocalization and Chain Conformation in Electron Push-Pull Polymers
+        Description: |
+          Electron push-pull polymers have attracted a significant amount of attention due to their order of magnitude-higher field-effect charge mobility compared
           to their homoconjugated counterparts. Unlike the traditional conjugated homopolymers, polymers of this kind are composed of 
           monomeric units of electron-sufficient and -deficient domains. The strong charge-transfer character mixes with localized Frenkel-like 
-          excitons, which leads to multiple exciton bands throughout the near IR-visible wavelengths. The charge-transfer character has 
-          also leads to a non-singlet spin responses. Here, I selected an uprising D-A polymer template, [<mark>DPP-DTT</mark>](https://www.ossila.com/products/dpp-dtt-polymer)
+          excitons, which leads to multiple exciton bands throughout the near IR-visible wavelengths. Here, I selected an uprising D-A polymer template, [<mark>DPP-DTT</mark>](https://www.ossila.com/products/dpp-dtt-polymer)
           and the thin films are deposited from solutions of a concentration gradient, thus the excitonic interchain interaction
           could be tuned:
-          - Conducted TA measurements to probe the excited-state landscapes of electron push-pull polymers.
+          - Conducted UV absorption and steady-state PL measurements for lineshape analysis and their indications on exciton coupling and delocalization.
+          - Conducted transient absorption (TA) measurements to probe the excited-state landscapes of electron push-pull polymers.
           - Scripted Python codes to analyze and visualize 2D data matrices as well as spectral and temporal distributions.
-          - Redesigned and built collinear TA from nonlinear geometry to accomodate small-NA magneto-optical module.
-        
+          - Collaborated with Dr. Connor Callaway and [Dr. Chad Risko](https://sites.google.com/view/risko-lab) for DFT calculations to assign the Raman modes observed from the experimental Raman spectra.
+
+          
       - layout: left
+        title: Exciton-Exciton Annihilation in Electron Push-Pull Conjugated Polymers
+           Short overview of the project (optional)
+        description: | 
+           EEA has known to dominate the early life-time (~10-100 ps) dynamics. Two possible mechanisms are widely applied and 
+           discussed: previously, two mechanisms have been proposed to explain the annihilation process: one is that the annihilation is achieved through F$\"o$rster-type long-range Coulombic interaction. Due to the random 
+           spatial distribution of excitons, the ensemble-averaged annihilation rates will decrease with time. Another type considers the anisotropy of exciton diffusion, and excitons can only interact when they are in proximity, either through
+           short-range Coulombic interaction or wavefunction overlap. In either scenario, the temporal dependence of the annihilation rates reflects on the spatial dependence of the exciton distribution or their motion. Therefore, the quantification
+           of the annihilation model can reveal key diffusion parameters. This work focuses on understanding the exciton dynamics and exciton exciton annihilation (EEA) in DPP-DTT thin films and acquiring the key diffusion paramters
+           by comparing two time-dependent techniques, TA and excitation-correlation photoluminescence (ECPL) spectroscopy. 
+           - Derived the EEA model for the ECPL detection scheme and simulated the experimental data with the derived formula.
+           - Simulated the TA data by considering both isotropic and anisotropic exciton diffusion to acquire the diffusion length and coefficients.
+
+      - layout: right
+        title: Excitonic Coulombic Interactions, Multimode Exciton-Phonon Coupling, Biexciton and Many-body Interactions Revealed by the Two-Dimensional Coherent Spectroscopy.
+        description: |
+          
+           
+
+           
+      - layout: Right
         title: Data Science Guided Construction of Structure-Property Relationship
         additional_links:
           - title: Literature Database
