--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ about_content: | # this will include new lines to allow paragraphs
   - Have been to/lived in a few places around the world.
   - Always excited about high tech.
   - Newbie skiier
+  - I will update my GitHub repo one day!
  
 content:
   - title: Research Projects 
@@ -134,6 +135,30 @@ content:
   - title: Experiences
     layout: list
     content:
+      - layout: left
+        title: Micron
+        sub_title: Intern - Photolithography Process Development Engineer
+        caption: May 2023 - August 2023
+        description: |
+        - Developed a mechanical kernel model based on literature to simulate the experimental observations with Python.
+        - Assisted the senior process engineer in analyzing the relationships of the pattern misalignment of wafer metrology data using JMP and Python.
+        - Generated a topographical model based on realistic wafer layouts to simulate pattern failure using Sentaurus Lithography. 
+        - Organized the research results into presentations for the internal design group and wrote a detailed pass-down document for future development.
+
+    layout: list
+    content:
+      - layout: right
+        title: Organic Materials Characterization Lab
+        sub_title: Training Staff
+        caption: May 2022 - September 2023
+        description: |
+        - Aided technical staff to install new modules for the GC/MS and time-resolved PL.
+        - Trained new users on the material characterization techniques, including UV-Vis, steady-state and time-resolved PL, FTIR spectroscopy, DLS and GC/MS.
+        - Created and updated user manuals for the instruments, as well as daily maintenance and troubleshooting.
+
+  
+    layout: list
+    content:
       - layout: right
         title: Silva Lab
         sub_title: Graduate Research Assistant
@@ -209,8 +234,9 @@ content:
   - title: Publication
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Venkatesh, Rahul, <mark>Yulong Zheng</mark>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
-      Solution Concentration as a Key Parameter in Device Performance." [ACS Materials Letters 3, no. 9 (2021): 1321-1327.](https://pubs.acs.org/doi/abs/10.1021/acsmaterialslett.1c00320)
+      please see my Google Scholar profile (https://scholar.google.com/citations?user=pcLymh4AAAAJ&hl=en)
+      # Venkatesh, Rahul, <mark>Yulong Zheng</mark>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
+      # Solution Concentration as a Key Parameter in Device Performance." [ACS Materials Letters 3, no. 9 (2021): 1321-1327.](https://pubs.acs.org/doi/abs/10.1021/acsmaterialslett.1c00320)
       
       
 # Footer
