--- a/_config.yml
+++ b/_config.yml
@@ -235,8 +235,8 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       - please see my Google Scholar profile (https://scholar.google.com/citations?user=pcLymh4AAAAJ&hl=en)
-      # Venkatesh, Rahul, <mark>Yulong Zheng</mark>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
-      # Solution Concentration as a Key Parameter in Device Performance." [ACS Materials Letters 3, no. 9 (2021): 1321-1327.](https://pubs.acs.org/doi/abs/10.1021/acsmaterialslett.1c00320)
+## Venkatesh, Rahul, <mark>Yulong Zheng</mark>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
+## Solution Concentration as a Key Parameter in Device Performance." [ACS Materials Letters 3, no. 9 (2021): 1321-1327.](https://pubs.acs.org/doi/abs/10.1021/acsmaterialslett.1c00320)
       
       
 # Footer
